# ubuntu-touch-squircle-example

./: CMakeLists.txt  manifest.json.in
app/: CMakeLists.txt  squircle.desktop.in  squircle.qml
app/components/: CMakeLists.txt
app/tests/autopilot/: run
app/tests/autopilot/squircle/main/: test_main.py
app/ui/: CMakeLists.txt  HelloTab.qml  SquircleTab.qml  WorldTab.qml  WorldTabTools.qml
backend/: CMakeLists.txt
backend/modules/Squircle/: backend.cpp  backend.h  qmldir  squircle.cpp  squircle.h  squirclerenderer.cpp  squirclerenderer.h
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: squircle.sturmflut.pot
